--- a/maFileTool/maFileTool.csproj
+++ b/maFileTool/maFileTool.csproj
@@ -95,8 +95,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TwoCaptcha">
-      <HintPath>..\TwoCaptcha.dll</HintPath>
+    <Reference Include="TwoCaptcha, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\TwoCaptcha.1.0.0\TwoCaptcha.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
